fix contrast color in light theme

--- a/src/themes/_m3light.scss
+++ b/src/themes/_m3light.scss
@@ -19,11 +19,11 @@ $kip-light-color: (
   black: #000000, black-dim: #000000b6, black-dimmer: #00000029,
   port: #b70000,
   starboard: #008700,
-  zone-nominal: #0182fa,
-  zone-alert: #f0f032,
-  zone-warn: #ff8534,
-  zone-alarm: #ff0000,
-  zone-emergency: #741e1e,
+  zone-nominal: #0164FA,
+  zone-alert: #ffff60,
+  zone-warn: #ff8d41,
+  zone-alarm: #E90000,
+  zone-emergency: #760000,
   widget-card-background-color: #{$_widget-card-background-color},
   widget-card-border-color: #252525,
   background: #{$_background}
